Change Navigatori blog 2

--- a/aspetti-legali/privacy-policy/privacy-policy.html
+++ b/aspetti-legali/privacy-policy/privacy-policy.html
@@ -60,7 +60,7 @@
     </li>
     <li>
       <a
-        title="Navigatori Sito Internet"
+        title="Navigatori Blog"
         href="https://www.privacylab.it/informativa.php?15300389460"
         target="_blank"
         >Navigatori Blog</a
